--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -81,7 +81,7 @@
                     <div class="row">
                         <div class="col-md-12">
                         <p class="step-description">This section is for your code base and other supporting files (e.g. datasets). Write code and add files that the user can interact with. This code is not seen 
-                            by the user and is used only for compilation. This code is automatically encrypted so even if the user has access to the files, they cannot see the original contents. Note: we currently only encrypt Python files. Other file types can be protected by disabling imports such as <code>os</code> that allow the interviewee to look at the files, displaying printing during tests to stop any inspecting of the contents, and disabling network access so that the interviewee cannot send the contents anywhere.                  
+                            by the user and is used only for compilation. This code is automatically encrypted so even if the user has access to the files, they cannot see the original contents. Note: we currently only encrypt Python files. Other file types can be protected by disabling imports such as <code>os</code> and <code>inspect</code> that allow the interviewee to look at the files, displaying printing during tests to stop any inspecting of the contents, and disabling network access so that the interviewee cannot send the contents anywhere.                  
                         </p><hr />
                         <label class="code-label">Select Additional Imports For Your Project (Visible to users) <br />
                             <p class="field_description">Don't see something you need? <a href="mailto: support@encompassinterviews.com">Contact Us</a></p></label><br />
@@ -94,8 +94,8 @@
                             <br />
                             <label class="code-label" style="text-align: left;">Specify Which Imports Are Not Allowed (Visible to users) <br />
                             <p class="field_description">List the names of the modules, separated by commas.
-                                <br />We suggest banning the library <code>os</code> so the user cannot snoop around and look at your library.</p></label> <br />
-                            <input type="text" name="banned_imports" id="banned_imports" value="os", class="form-control">    
+                                <br />We suggest banning the libraries <code>os</code> and <code>inspect</code> so the user cannot snoop around and look at your library.</p></label> <br />
+                            <input type="text" name="banned_imports" id="banned_imports" value="os, inspect", class="form-control">    
                             <div class="form-group, step">
                             <label class="code-label">Supporting Files/Code Base (Not visible to users)</label> <br />
                             <div id="supporting_fields">
