communicate encryption again

--- a/frontend_templates/interview_q/question.html
+++ b/frontend_templates/interview_q/question.html
@@ -95,7 +95,7 @@
                             <br />
                             <label class="code-label" style="text-align: left;">Specify Which Imports Are Not Allowed (Visible to users) <br />
                             <p class="field_description">List the names of the modules, separated by commas.
-                                <br />We suggest banning the libraries <code>os</code> and <code>inspect</code> so the user cannot snoop around and look at your library.</p></label> <br />
+                                <br />We suggest banning the libraries <code>os</code> and <code>inspect</code> so the user cannot snoop around and look at your non code files. We automatically encrypt your Python files.</p></label> <br />
                             <input type="text" name="banned_imports" id="banned_imports" value="{{question.banned_imports}}", class="form-control">    
                             <div class="form-group, step">
                             <label class="code-label">Supporting Files/Code Base (Not visible to users)</label> <br />
