--- a/frontend_templates/base.html
+++ b/frontend_templates/base.html
@@ -66,6 +66,9 @@
                 <a class="nav-link" href="/about" style="color: #6c5ce7; font-weight: bold;">About Us</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="/blog" style="color: #6c5ce7; font-weight: bold;">Blog</a>
+              </li>
+              <li class="nav-item">
                   <a class="nav-link" href="/users/login" style="color: #6c5ce7; font-weight: bold;">Login</a>
               </li>
               <li class="nav-item">
@@ -88,6 +91,7 @@
             <p class="footer-items">
               <a href="/" class="footer-item">Home</a>
               <a href="/about" class="footer-item">About</a>
+              <a href="/blog" class="footer-item">Blog</a>
               <a href="/about/#contact_us" class="footer-item">Contact Us</a>
             </p>
             <p class="footer-title">Encompass Interviews</p>
