--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -10,15 +10,15 @@
   <div class="container homepage-container">
     <div class="col-lg-12 mb-12 landing-section">
         <div class="col-md-12">
-          <h1 class="landing-title" data-aos="fade-right" data-aos-duration="500" data-aos-once="true">Join the Interview Question Revolution</h1>
+          <h1 class="landing-title" data-aos="fade-down" data-aos-duration="500" data-aos-once="true">Join the Interview Question Revolution</h1>
         </div>
         <div class="row">
-          <div id="landing-images" class="col-lg-6 col-md-0">
+          <div id="landing-images" data-aos="fade-left" data-aos-duration="500" data-aos-once="true" class="col-lg-6 col-md-0">
               <img class="floating-icon" src="/static/images/sample_screen.png">
               <img class="floating-icon-bg" src="/static/images/sample_screen_bg.png">
           </div>
           <div class="col-lg-6 col-md-12">
-              <p class="landing-description" data-aos="fade-left" data-aos-duration="1500" data-aos-once="true">Encompass Interviews provides interviewers with tools to evaluate potential hires based on real world and unique programming challenges.
+              <p class="landing-description" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">Encompass Interviews provides interviewers with tools to evaluate potential hires based on real world and unique programming challenges.
               </p>
           </div>
         </div>
