--- a/frontend_templates/registration/login.html
+++ b/frontend_templates/registration/login.html
@@ -20,10 +20,10 @@
     <form class="form-signin" method="post">
       {% csrf_token %}
       
-      <h1 class="h3 mb-3 font-weight-normal page-title">SIGN IN</h1>
-      <label for="email" class="sr-only">Email address</label>
-      <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required autofocus><br />
-      <label for="password" class="sr-only">Password</label>
+      <h1 class="page-title">SIGN IN</h1>
+      <label for="email">Email Address</label>
+      <input type="email" id="email" name="email" class="form-control" placeholder="Email Address" required autofocus><br />
+      <label for="password">Password</label>
       <input type="password" id="password" name="password" class="form-control" placeholder="Password" required><br />
       <br /><br />
       <button class="btn btn-lg btn-primary btn-block form-block" type="submit">Sign In</button><br />
