--- a/frontend_templates/registration/signup.html
+++ b/frontend_templates/registration/signup.html
@@ -19,7 +19,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #FFF;
+    background-color: rgb(236, 236, 236);
     -webkit-transition: .4s;
     transition: .4s;
     }
@@ -109,15 +109,17 @@
     <form class="form-signin" method="post">
       {% csrf_token %}
       
-      <h1 class="h3 mb-3 font-weight-normal">SIGN UP</h1>
+      <h1 class="page-title">SIGN UP</h1>
       <p class="footer-text" >Already have an account? <a href="/users/login">Login here</a></p>
-      <label for="email" class="sr-only">Email address</label>
-      <input type="email" id="email" name="email" class="form-control" placeholder="Email address" required autofocus><br />
+      <label for="email">Email Address</label>
+      <input type="email" id="email" name="email" class="form-control" placeholder="Email Address" required autofocus><br />
+      <label for="email">First Name</label>
       <input type="text" id="first_name" name="first_name" class="form-control" placeholder="First Name" required maxlength="32"><br />
+      <label for="email">Last Name</label>
       <input type="text" id="last_name" name="last_name" class="form-control" placeholder="Last Name" required maxlength="32"><br />
-      <label for="password" class="sr-only">Password</label>
+      <label for="password">Password</label>
       <input type="password" id="password" name="password" class="form-control" placeholder="Password" required><br />
-      <label for="password2" class="sr-only">Confirm Password</label>
+      <label for="password2">Confirm Password</label>
       <input type="password" id="password2" name="password2" class="form-control" placeholder="Confirm Password" required> <br>
       <p class="footer-text">Do you wish to make or assign interview questions (will you be interviewing candidates)?</p>
 
