--- a/frontend_templates/info/account.html
+++ b/frontend_templates/info/account.html
@@ -35,6 +35,9 @@
 
             <label for="account_status">Membership Expiration</label>
             <input type="text" id="account_status" name="account_status" class="form-control" value="{{ terminated_time }}" readonly><br />
+
+            <label for="account_status">Membership Auto-Renewal</label>
+            <input type="text" id="account_status" name="account_status" class="form-control" value="{{ auto_renew }}" readonly><br />
       </div>
       <a href="/users/enroll" class="action-link">Change or Renew Membership Status</a><br /><br/>
       {% endif %}
