--- a/frontend_templates/registration/enroll.html
+++ b/frontend_templates/registration/enroll.html
@@ -1,111 +1,154 @@
 {% extends "base.html" %}
 {% load static %}
+{% load compress %}
 {% block css_imports %}
 <link href="{% static 'main/css/enroll.css' %}" rel="stylesheet">
 {% endblock %}
 {% block content %}
-<center>
-<div class="main-body">
-      
-      <h1 class="page-title">BECOME A CREATOR</h1><br />
-      {% if message %}
-        <div class="alert alert-warning alert-dismissible fade show page-message" role="alert">
-                <p class="warning">{{message}}</p>
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-        </div><br/>
-      {% endif %}
-      {% if success %}
-      <div class="alert alert-success alert-dismissible fade show page-message" role="alert">
-            <p class="warning">{{success}}</p>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-    </div><br/>
-      {% endif %}
-      <h3 class="option-header">Option 1: Payment:</h3>
-      {% if is_active_member %}
-      <br />
-        <div class="alert alert-info alert-dismissible fade show page-message" role="alert">
-            <p class="warning">As a member, if you downgrade or upgrade to a different plan listed below, then the new plan will immediately take effect and will last 31 days from its purchase time.
-                <br /><br /><b>Your current plan is {{ user.subscription.plan_type }}</b>
+{% if user.is_authenticated %}
+  <script src="https://js.stripe.com/v3/"></script>
+  <center>
+  <div class="main-body">
+        <h1 class="page-title">BECOME A CREATOR</h1><br />
+        {% if message %}
+          <div class="alert alert-warning alert-dismissible fade show page-message" role="alert">
+                  <p class="warning">{{message}}</p>
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+          </div><br/>
+        {% endif %}
+        {% if success %}
+        <div class="alert alert-success alert-dismissible fade show page-message" role="alert">
+              <p class="warning">{{success}}</p>
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+      </div><br/>
+        {% endif %}
+        <h3 class="option-header">Option 1: Payment</h3>
+        <hr>
+        <div>
+          <p id="plan_info">If you purchase a plan, you will only be charged once every month on a recurring basis. As a member, if you downgrade or upgrade to a different plan listed below, then the new plan will immediately take effect and will last 31 days from its purchase time.
+            </p>
+        </div>
+        {% if is_active_member %}
+        <br />
+          <div class="alert alert-info alert-dismissible fade show page-message" role="alert">
+              <p class="warning">
+                  <b>Your current plan is {{ user.subscription.plan_type }}<br>
+                    Expires: {{user.subscription.terminated_on}} UTC</b>
+              </p>
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <br />
+          <div class="alert alert-info alert-dismissible fade show page-message" role="alert">
+            <p class="warning"><b>
+              {% if user.auto_renew %}
+                You have auto-renewal on, press the button below to turn it off.
+                <button class="form-control btn-success renew-btn" onclick="turnOffAutoRenew()">Turn Off Auto-Renew</button>
+              {% else %}
+                You have auto-renewal off, press the button below to turn it on.
+                <button class="form-control btn-success renew-btn"  onclick="turnOnAutoRenew()">Turn On Auto-Renew</button>
+              {% endif %}
+              </b>
             </p>
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
+          </div>
+        <br/>
+        {% endif %}
+        <div id="price_table">   
+          <section>
+                  <div class="container">
+                      <div class="row">
+                        {% for plan in plans %}
+                          <div class="col-md-{{col_length}}">
+                              <div class="generic_content clearfix" id="plan_{{forloop.counter0}}">
+                                  <div class="generic_head_price clearfix">
+                                      <div class="generic_head_content clearfix">
+                                          <div class="head_bg"></div>
+                                          <div class="head">
+                                              <span>{{plan.0}}</span>
+                                          </div>
+                                      </div>
+                                      <div class="generic_price_tag clearfix">	
+                                          <span class="price">
+                                              <span class="sign">$</span>
+                                              <span class="currency">{{plan.2}}</span>
+                                              <span class="cent">.00</span>
+                                              <span class="month">/MON</span>
+                                          </span>
+                                      </div>              
+                                  </div>                            
+                                  <div class="generic_feature_list">
+                                    <ul>
+                                        {% if plan.3 == 1 %}
+                                          <li><span>{{plan.3}}</span> Question</li>
+                                        {% else %}
+                                          <li><span>{{plan.3}}</span> Questions</li>
+                                        {% endif %}
+                                    </ul>
+                                  </div>
+                                  <button id="pay_button" num_questions="{{plan.3}}" onclick="showPayment(this)" class="btn btn-success">Pay With Card</button>
+                              </div>
+                          </div>
+                        {% endfor %}
+                      </div>	
+                  </div>
+              </section>             
         </div>
-      <br/>
-      {% endif %}
-      <div class="alert alert-info alert-dismissible fade show page-message" role="alert">
-        <p class="warning">If you purchase a plan, you will only be charged once on a non-recurring basis for a 31 day plan. To continue your membership, you will need to purchase the plan again.</p>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div id="price_table">   
-        <section>
-                <div class="container">
-                    <div class="row">
-                      {% for plan in plans %}
-                        <div class="col-md-{{col_length}}">
-                            <div class="generic_content clearfix">
-                                <div class="generic_head_price clearfix">
-                                    <div class="generic_head_content clearfix">
-                                        <div class="head_bg"></div>
-                                        <div class="head">
-                                            <span>{{plan.0}}</span>
-                                        </div>
-                                    </div>
-                                    <div class="generic_price_tag clearfix">	
-                                        <span class="price">
-                                            <span class="sign">$</span>
-                                            <span class="currency">{{plan.2}}</span>
-                                            <span class="cent">.00</span>
-                                            <span class="month">/MON</span>
-                                        </span>
-                                    </div>              
-                                </div>                            
-                                <div class="generic_feature_list">
-                                  <ul>
-                                      {% if plan.3 == 1 %}
-                                        <li><span>{{plan.3}}</span> Question</li>
-                                      {% else %}
-                                        <li><span>{{plan.3}}</span> Questions</li>
-                                      {% endif %}
-                                  </ul>
-                                </div>
-                                <div class="generic_price_btn clearfix">
-                                    <form action="{% url 'make_payment' %}" method="post">
-                                        {% csrf_token %}
-                                        <input type="hidden" name="amount" value="{{plan.2}}00"></input>
-                                        <input type="hidden" name="description" value="{{plan.0}} Plan"></input>
-                                        <script src="https://checkout.stripe.com/checkout.js" 
-                                            class="stripe-button"
-                                            data-key="{{ key }}"
-                                            data-description="{{plan.0}} Plan"
-                                            data-amount="{{plan.2}}00"
-                                            data-currency='usd'
-                                            data-locale="auto">
-                                        </script>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                      {% endfor %}
-                    </div>	
+        <div>
+          <div id="payment_form" num_questions="1">
+            <div class="cell card-payment">
+                <div id="example4-paymentRequest">
                 </div>
-            </section>             
-        </div>
-        <hr />
-        <br />
-     <form class="form-signin" method="post" action="{% url 'enroll' %}"></form>
-        {% csrf_token %}
-        <h3 class="option-header">Option 2: Coupon/Promo Code:</h3><br />
-        <input type="text" id="coupon_code" name="coupon_code" class="form-control" placeholder="Coupon Code"><br />
-        <br />
-        <button class="btn btn-lg btn-primary btn-block form-block submit-btn" type="submit">Enter Coupon</button>
-    </form>
-</div>
-</center>
+                <fieldset>
+                  <legend class="card-only" id="card_title">Pay With Card</legend>
+                  <legend class="payment-request-available">Or enter card details</legend>
+                  <div class="container">
+                    <div id="example-card"></div>
+                    <button id="submit_payment" onclick="submitPayment()">Pay</button>
+                  </div>
+                </fieldset>
+                <div class="spinner-border" role="status" id="payment_loading">
+                </div>
+                <div class="error" role="alert"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 17 17" id="error_div">
+                    <path class="base" fill="#000" d="M8.5,17 C3.80557963,17 0,13.1944204 0,8.5 C0,3.80557963 3.80557963,0 8.5,0 C13.1944204,0 17,3.80557963 17,8.5 C17,13.1944204 13.1944204,17 8.5,17 Z"></path>
+                    <path class="glyph" fill="#FFF" d="M8.5,7.29791847 L6.12604076,4.92395924 C5.79409512,4.59201359 5.25590488,4.59201359 4.92395924,4.92395924 C4.59201359,5.25590488 4.59201359,5.79409512 4.92395924,6.12604076 L7.29791847,8.5 L4.92395924,10.8739592 C4.59201359,11.2059049 4.59201359,11.7440951 4.92395924,12.0760408 C5.25590488,12.4079864 5.79409512,12.4079864 6.12604076,12.0760408 L8.5,9.70208153 L10.8739592,12.0760408 C11.2059049,12.4079864 11.7440951,12.4079864 12.0760408,12.0760408 C12.4079864,11.7440951 12.4079864,11.2059049 12.0760408,10.8739592 L9.70208153,8.5 L12.0760408,6.12604076 C12.4079864,5.79409512 12.4079864,5.25590488 12.0760408,4.92395924 C11.7440951,4.59201359 11.2059049,4.59201359 10.8739592,4.92395924 L8.5,7.29791847 L8.5,7.29791847 Z"></path>
+                  </svg>
+                  <span class="message" id="error_message"></span>
+                </div>
+                <div class="success" id="success_div">
+                  <div class="icon">
+                    <svg width="84px" height="84px" viewBox="0 0 84 84" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                      <circle class="border" cx="42" cy="42" r="40" stroke-linecap="round" stroke-width="4" stroke="#000" fill="none"></circle>
+                      <path class="checkmark" stroke-linecap="round" stroke-linejoin="round" d="M23.375 42.5488281 36.8840688 56.0578969 64.891932 28.0500338" stroke-width="4" stroke="#000" fill="none"></path>
+                    </svg>
+                  </div>
+                  <h3 class="title">Payment Successful</h3>
+                  <p class="message" id="success_message"></p>
+              </div>
+            </div>
+          </div>
+          </div>
+          <br />
+      <form class="form-signin" method="post" action="{% url 'enroll' %}"></form>
+          {% csrf_token %}
+          <h3 class="option-header">Option 2: Coupon/Promo Code</h3><hr />
+          <input type="text" id="coupon_code" name="coupon_code" class="form-control" placeholder="Coupon Code"><br />
+          <br />
+          <button class="btn btn-lg btn-primary btn-block form-block submit-btn" type="submit">Enter Coupon</button>
+      </form>
+  </div>
+  </center>
+  {% compress js inline %}
+  <script src="{% static 'main/js/enroll.js' %}"></script>
+  {% endcompress %}
+{% else %}
+{% include "no_auth.html" %}
+{% endif %}
 {% endblock %}
