--- a/frontend_templates/registration/password_reset_done.html
+++ b/frontend_templates/registration/password_reset_done.html
@@ -11,7 +11,7 @@
     <form class="form-signin" method="post">
         {% csrf_token %}
         
-        <h1 class="h3 mb-3 font-weight-normal">PASSWORD RESET SET TO EMAIL</h1>
+        <h1 class="h3 mb-3 font-weight-normal">PASSWORD RESET SENT TO EMAIL</h1>
     </form>
 </div>
 </center>
